--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "serverless": "^1.46.0"
+    "serverless": "^1.69.0",
+    "serverless-dotenv-plugin": "^2.4.2",
+    "serverless-plugin-warmup": "^4.9.0"
   },
   "dependencies": {
     "aws-sdk": "^2.525.0",
