--- a/package.json
+++ b/package.json
@@ -14,7 +14,14 @@
     "serverless-plugin-warmup": "^4.9.0"
   },
   "dependencies": {
-    "aws-sdk": "^2.751.0",
-    "uuid": "^3.4.0"
+    "aws-sdk": "^2.935.0",
+    "bluebird": "^3.7.2",
+    "busboy": "^0.3.1",
+    "change-case": "^4.1.2",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
+    "shuffle-array": "^1.0.1",
+    "uuid": "^8.3.2",
+    "uuidv4": "^6.2.10"
   }
 }
