--- a/serverless.yaml
+++ b/serverless.yaml
@@ -55,6 +55,15 @@ functions:
       - http:
           path: image/list
           method: get
+          cors:
+              origin: '*'
+              headers:
+                - Content-Type
+                - X-Amz-Date
+                - Authorization
+                - X-Api-Key
+                - X-Amz-Security-Token
+              allowCredentials: true
   imageDelete:
     warmup: false
     prewarm: false
